# open-claude-code

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAW.md  PARITY.md  README.md  package.json
.claude/: launch.json
.claw/plans/: wiki-maintainer-mvp.md
.github/workflows/: ci.yml  release.yml
ClawWiki Design System/: ICONOGRAPHY.md  README.md  SKILL.md  colors_and_type.css
ClawWiki Design System/preview/: brand-divider.html  brand-figures.html  brand-lockups.html  colors-brand.html  colors-neutrals.html  colors-semantic.html  colors-surfaces.html  components-badges.html  components-buttons.html  components-cards.html  components-chat.html  components-inputs.html  components-sidebar.html  elevation-levels.html  radius-scale.html  spacing-scale.html  type-body.html  type-display.html  type-mono.html
ClawWiki Design System/scraps/: sketch-2026-04-20T02-28-55-etwd4k.napkin
ClawWiki Design System/ui_kits/desktop-shell/: App.jsx  Ask.jsx  Dashboard.jsx  Icons.jsx  Inbox.jsx  README.md  Shell.jsx  index.html  kit.css
ClawWiki Design System/ui_kits/desktop-shell-v2/: App.jsx  Ask.jsx  Connect.jsx  Home.jsx  Icons.jsx  KnowledgeBase.jsx  README.md  Shell.jsx  index.html  kit.css
apps/desktop-shell/: DESIGN_TOKENS.md  REFACTOR_PLAN.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop-shell/scripts/: check-mojibake.mjs  mojibake-dictionary.json
apps/desktop-shell/src/: App.tsx  globals.css  main.tsx
apps/desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-shell/src-tauri/capabilities/: default.json
apps/desktop-shell/src-tauri/icons/: icon.icns
apps/desktop-shell/src-tauri/src/: cc_switch_terminal.rs  main.rs  pipeline.rs
apps/desktop-shell/src-tauri/src/agents/: mod.rs  openclaw_cli.rs  openclaw_install.rs  openclaw_lifecycle.rs  openclaw_start.rs
backlog/: phase1-deferred.md
docs/: audit-lessons.md  commander-prompt.md  getting-started.md  multi-agent-bug-ops.md  open-claude-code-parity-dependency-design.md  open-claude-code-parity-migration-checklist.md  warwolf-code-tools-strict-clone-design-review.md  warwolf-provider-openai-codex-only-design-review.md
docs/clawwiki/: README.md  backend-design.md  desktop-llm-gateway-integration.md  product-design.md  wireframes.html
docs/clawwiki/_archive/: README.md  product-design-v1.md  product-design-v2.md  product-design-v3.md  product-design.md  wireframes-v1.html  wireframes-v2.html  wireframes-v3.html  wireframes.html
docs/design/modules/: 01-skill-engine.md
docs/desktop-shell/: cloud-managed-integration.md
docs/desktop-shell/architecture/: overview.md
docs/desktop-shell/operations/: KNOWN_ISSUES.md  README.md  step-9-motion-validation.md
docs/desktop-shell/plans/: 2026-04-10-claudewiki-wechat-customer-service-ingress-plan.md  2026-04-12-desktop-shell-open-source-gateway-plan.md  2026-04-14-claudewiki-wechat-ecosystem-knowledge-engine-plan.md  2026-04-24-phase-2-readiness-audit.md  2026-04-24-phase-2-to-4-long-run-checklist.md  2026-04-29-buddy-tolaria-deep-product-design-implementation-plan.md  README.md
memory/: corrections.jsonl  evolution-log.md  learned-rules.md  observations.jsonl
rules/: path-risk-matrix.md  trigger-map.md
rust/: CONTRIBUTING.md  Cargo.toml  README.md
rust/crates/desktop-cli/: Cargo.toml
rust/crates/desktop-cli/src/: main.rs
rust/crates/desktop-core/: Cargo.toml
rust/crates/desktop-core/src/: absorb_task.rs  agentic_loop.rs  attachments.rs  codex_auth.rs  codex_broker.rs  lib.rs  managed_auth.rs  openai_compat_streaming.rs  openai_tool_schema.rs  prerequisites.rs  protocol_codegen.rs  provider_hub.rs  providers_config.rs  secure_storage.rs  skill_router.rs  system_prompt.rs  tool_execution.rs  wiki_maintainer_adapter.rs
rust/crates/desktop-core/src/ask_context/: binding.rs  mod.rs
rust/crates/desktop-core/src/url_ingest/: canonical.rs  content_hash.rs  dedupe.rs  mod.rs  recent.rs
rust/crates/desktop-core/src/wechat_ilink/: account.rs  client.rs  dedupe.rs  desktop_handler.rs  handlers.rs  ingest_config.rs  login.rs  markdown_split.rs  mod.rs  monitor.rs  pending_logins.rs  types.rs
rust/crates/desktop-core/src/wechat_kefu/: account.rs  callback.rs  client.rs  deployer.rs  desktop_handler.rs  email_client.rs  mod.rs  monitor.rs  pipeline.rs  pipeline_types.rs  relay_client.rs  types.rs
rust/crates/desktop-core/src/wechat_kefu/relay_template/: package.json  wrangler.toml
rust/crates/desktop-core/src/wechat_kefu/relay_template/src/: index.js
rust/crates/desktop-server/: Cargo.toml
rust/crates/desktop-server/src/: lib.rs  main.rs
rust/crates/desktop-server/src/handlers/: desktop_sessions.rs  desktop_storage.rs  desktop_utilities.rs  mod.rs  provider_runtime.rs  wechat.rs  wiki_crud.rs  wiki_reports.rs  wiki_tasks.rs
rust/crates/desktop-server/src/routes/: wechat.rs  wiki.rs
rust/crates/wiki_ingest/: Cargo.toml
rust/crates/wiki_ingest/src/: docx.rs  extractor.rs  html_to_md.rs  image.rs  lib.rs  markitdown.rs  markitdown_worker.py  pdf.rs  pptx.rs  url.rs  wechat_fetch.rs  wechat_fetcher.py
rust/crates/wiki_maintainer/: Cargo.toml
rust/crates/wiki_maintainer/src/: lib.rs  prompt.rs
rust/crates/wiki_patrol/: Cargo.toml
rust/crates/wiki_patrol/src/: lib.rs
rust/crates/wiki_store/: Cargo.toml
rust/crates/wiki_store/src/: lib.rs  wechat_outbox.rs
rust/crates/wiki_store/src/provenance/: mod.rs
rust/crates/wiki_store/templates/: AGENTS.md  CLAUDE.md  purpose-lenses.yml
rust/crates/wiki_store/templates/policies/: conflict.md  deprecation.md  maintenance.md  naming.md
rust/crates/wiki_store/templates/templates/: compare.md  concept.md  people.md  personal.md  research.md  topic.md
rust/docs/releases/: 0.1.0.md
scripts/: check-memory-append-only.mjs  check-memory-jsonl.mjs  import-apple-certificate.sh  macos-sign-notarize.sh  phase5-power-tools-smoke.mjs  store-apple-notary-credentials.sh
tasks/: plan.md  plan.v3-archive.md  todo.md  todo.v3-archive.md
tools/wechat-bridge/: .gitignore  README.md  package.json
(+265 files in other folders)
