[workspace]
members = [
    "crates/desktop-core",
    "crates/desktop-server",
    "crates/desktop-cli",
    "crates/server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
# Rust core lives in claw-code-parity. Update all four revs together.
api = { git = "https://github.com/wangedoo518/claw-code-parity.git", rev = "736069f1ab45a4e90703130188732b7e5ac13620" }
lsp-types = "0.97"
plugins = { git = "https://github.com/wangedoo518/claw-code-parity.git", rev = "736069f1ab45a4e90703130188732b7e5ac13620" }
runtime = { git = "https://github.com/wangedoo518/claw-code-parity.git", rev = "736069f1ab45a4e90703130188732b7e5ac13620" }
serde_json = "1"
tools = { git = "https://github.com/wangedoo518/claw-code-parity.git", rev = "736069f1ab45a4e90703130188732b7e5ac13620" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
