[workspace]
members = [
    "crates/desktop-core",
    "crates/desktop-server",
    "crates/desktop-cli",
    "crates/server",
    # ── ClawWiki S0+ new crates ─────────────────────────────────────
    # Per `docs/clawwiki/product-design.md` §11.2. Added incrementally
    # so each crate lands behind its own RED→GREEN→commit cycle.
    "crates/wiki_store",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
# Rust core lives in claw-code-parity. Update all four revs together.
api = { git = "https://github.com/wangedoo518/claw-code-parity.git", rev = "736069f1ab45a4e90703130188732b7e5ac13620" }
lsp-types = "0.97"
plugins = { git = "https://github.com/wangedoo518/claw-code-parity.git", rev = "736069f1ab45a4e90703130188732b7e5ac13620" }
runtime = { git = "https://github.com/wangedoo518/claw-code-parity.git", rev = "736069f1ab45a4e90703130188732b7e5ac13620" }
serde_json = "1"
tools = { git = "https://github.com/wangedoo518/claw-code-parity.git", rev = "736069f1ab45a4e90703130188732b7e5ac13620" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"

# ── Vendored crate patches ──────────────────────────────────────────
#
# Override the upstream `api` crate from `claw-code-parity` with a local
# copy under `../vendor/api/`. This lets us land protocol-level fixes
# without waiting for upstream merges.
#
# Current patches applied in the local copy:
#  * `openai_compat.rs::translate_message` — omit empty `tool_calls`
#    field for assistant messages instead of emitting `tool_calls: []`.
#    Strict OpenAI-compat providers (DeepSeek, some DashScope variants)
#    return `400 Invalid 'messages[N].tool_calls': empty array` when
#    they see the empty list. The OpenAI canonical client also omits
#    the field; we now match that behaviour.
#
# To add another patched crate from the same git source: just copy the
# crate dir under `../vendor/<name>/` and add a corresponding line below.
[patch."https://github.com/wangedoo518/claw-code-parity.git"]
api = { path = "../vendor/api" }
