[package]
name = "desktop-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aes-gcm = "0.10"
api.workspace = true
axum = "0.8"
base64 = "0.22"
plugins.workspace = true
rand = "0.8"
runtime.workspace = true
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1", features = ["net", "rt", "sync", "time"] }
tokio-util = "0.7"
toml_edit = "0.22"
tools.workspace = true
url = "2"
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
