[package]
name = "desktop-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "desktop-server"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
bytes = "1"
desktop-core = { path = "../desktop-core" }
futures = "0.3"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
tower-http = { version = "0.6", features = ["cors"] }

[lints]
workspace = true
