[package]
name = "desktop-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
private-cloud = ["desktop-core/private-cloud"]

[[bin]]
name = "desktop-server"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1"
desktop-core = { path = "../desktop-core" }
wiki_maintainer = { path = "../wiki_maintainer" }
wiki_store = { path = "../wiki_store" }
wiki_patrol = { path = "../wiki_patrol" }
wiki_ingest = { path = "../wiki_ingest" }
futures = "0.3"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time", "signal"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
