[package]
name = "wiki_ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# ── Why a standalone crate? ────────────────────────────────────────
# `wiki_ingest` owns the adapters that turn inbound URLs, voice
# clips, images, PPTs, PDFs, DOCX, and videos into markdown bodies
# landing under `~/.clawwiki/raw/`. Per ClawWiki canonical §11.2
# this is one of the six new crates in the ingestion pipeline.
#
# Kept separate from `wiki_store` because the adapters will eventually
# pull in heavy deps (python-pptx spawning, whisper-rs, ffmpeg-sys-next,
# pdfjs-dist etc.) that `wiki_store` has no business knowing about.
# Today the only adapter is `url::fetch_and_body`, so the dep graph
# is minimal: just `reqwest` + `thiserror`.

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# H: HTML → clean markdown extraction (canonical §7.3 row 1).
#
# scraper wraps html5ever + selectors for a stable, maintained
# HTML parser with CSS-selector querying. We use it for both the
# mp.weixin.qq.com-specific extractor (selects `.rich_media_content`
# and friends) and the generic fallback. Alternative readability-*
# crates were considered but rejected — scraper gives us full
# control over site-specific tweaks without black-box heuristics,
# and the 400 lines of custom extractor code is easier to audit
# than a third-party readability port.
# L-pdf: native PDF text extraction. Zero external binaries needed.
pdf-extract = "0.10"
scraper = "0.20"
thiserror = "2"
# L-docx: DOCX is a ZIP of XML. We parse word/document.xml directly.
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
wiki_store = { path = "../wiki_store" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "net", "rt-multi-thread"] }

[lints]
workspace = true
