[package]
name = "wiki_maintainer"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# ── Why a standalone crate? ────────────────────────────────────────
# `wiki_maintainer` is the canonical §4 blade 3 implementation: it
# turns raw/ entries into wiki/ concept pages by making a single
# `codex_broker::chat_completion` call (engram style per §7.3 row 7)
# and parsing the returned JSON. Keeping it separate from `wiki_store`
# lets the store stay a pure filesystem library with no async /
# HTTP / LLM deps, and keeps the broker-adapter surface testable
# via a small trait in this crate.
#
# Canonical §11.2 lists this crate as one of the six new ClawWiki
# crates. This is the MVP (engram); a future sprint may layer a
# multi-pass `sage-wiki`-style compiler on top.

[dependencies]
api.workspace = true
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tokio-util = "0.7"
wiki_store = { path = "../wiki_store" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }

[lints]
workspace = true
