[package]
name = "wiki_patrol"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# wiki_patrol — structural quality checks for the wiki layer.
# Per technical-design.md §4.3: depends only on wiki_store,
# no LLM/async/HTTP dependencies.

[dependencies]
wiki_store = { path = "../wiki_store" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
